--- a/financial/net income.ipynb
+++ b/financial/net income.ipynb
@@ -54,6 +54,9 @@
      "output_type": "display_data"
     }
    ],
+   "tags": [
+        "hide_input",
+    ]
    "source": [
     "import math\n",
     "import pandas as pd\n",
@@ -81,6 +84,9 @@
    "execution_count": 188,
    "metadata": {},
    "outputs": [],
+   "tags": [
+        "hide_input",
+   ]
    "source": [
     "@dataclass\n",
     "class plan:\n",
